--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: Osteria Child
-Theme URI: http://pixelgrade.com/demos/osteria
-Author: PixelGrade Team
+Theme Name: Fargo Child
+Theme URI: http://pixelgrade.com/demos/fargo
+Author: Pixelgrade
 Author URI: http://pixelgrade.com
-Template: osteria
-Description:  osteria is an enchanting and easy-to-use parallax Restaurant WordPress theme that allows you to tell your story in a dynamic, narrative and enjoyable way, making it perfect for restaurants, bakeries, bars or coffee shops.
+Template: fargo
+Description: Fargo is a photography WordPress theme crafted for visual artists who want to inspire the world by showcasing their work in style.
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: osteria
-Tags: black, orange, light, one-column, two-columns, right-sidebar, flexible-width, custom-header, custom-menu, editor-style, featured-images, microformats, sticky-post, translation-ready
+Text Domain: fargo
+Tags: one-column, two-columns, right-sidebar, flexible-header, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, theme-options, threaded-comments, translation-ready
 */
 
 /* Add your custom CSS rules that overwrite the ones in the main Lens theme here */
@@ -16,4 +16,4 @@ Tags: black, orange, light, one-column, two-columns, right-sidebar, flexible-wid
 /* This file assumes you wish to add new CSS rules that will overwrite the ones in the parent's CSS files
 If you wish however, you can copy the whole style.css file from the parent here and hack at it - see functions.php for more details.
 In that case please remember that you still need to retain the header above (replace the header of the parent style.css with the one above),
-specifically the 'Template: osteria' line. */
+specifically the 'Template: fargo' line. */
